--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <div class="bottomContainer">
       <a class="footerLink" target="_blank" href="https://www.linkedin.com/">LinkedIn</a>
-      <a class="footerLink" target="_blank" href="https://github.com/">Website</a>
+      <a class="footerLink" target="_blank" href="https://github.com/falckl">GitHub</a>
       <p class="copyright">© Copyright</p>
     </div>
 
